# Simulator-Mobility-Fso-Visibility

./: a2c_discreete.py  base_stations.py  channel_model.py  ddpg.py  ddpg_implementation.py  dql_environment.py  graph_tools.py  icc_simulation.py  irradiation.py  main_controller.py  mmwave_modeling.py  nn_main.py  obstacles.py  parameters.py  paths.py  scratch.py  scratch2  solar_user_mobility.py  test_visibility.py  tf_implementation.py  user_equipment.py  user_mobility.py  visibility_graph.py  wwrf_simulation.py
resources/: data_structures.py  math_utils.py  plotting.py
results/: arrivals_per_hour.txt  energy_per_hour.txt  energy_per_hour_no_solar.txt  n_bs_per_hour.txt  n_bs_per_hour_no_solar.txt  returns_per_hour.txt  returns_per_hour_no_solar.txt
tmp/ddpg/: actor_ddpg.h5  critic_ddpg.h5  target_actor_ddpg.h5  target_critic_ddpg.h5
visibility_polygon/: CMakeLists.txt  general_polygon_example.cpp  main.cpp
